# ChangeLog for genkernel
# Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_cmdline.sh,
  gen_configkernel.sh, genkernel:
  Some more generalcleanup and adding support for using a config file other
  than /etc/genkernel.conf to add flexibility.

  17 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  -pkg/module-init-tools-0.9.15-pre4.tar.bz2,
  -pkg/klibc-1.1.16-sparc2.patch, -pkg/klibc-1.2.1-nostdinc-flags.patch,
  -pkg/modutils-2.4.26.tar.bz2:
  Removing klibc/modutils/module-init-tools files, since we don't need any of
  them, anymore.

  17 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> genkernel:
  It helps if I use 'g' when doing a sed.

  17 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_bootloader.sh,
  genkernel, genkernel.conf:
  Removed the use of GK_BIN variable, since it isn't necessary.

  17 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> TODO, genkernel.conf:
  Updated TODO and cleaning up genkernel.conf a bit.

  17 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> generic/linuxrc,
  netboot/misc/bin/net-setup, netboot/misc/etc/fstab:
  Remove some unnecessary copyright dates from a few files so we don't keep
  forgetting to update them when we modify the files.

  17 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_cmdline.sh,
  gen_configkernel.sh, gen_determineargs.sh, gen_initramfs.sh, genkernel,
  genkernel.8, mips/config.sh:
  Renamed gensplash to splash and marked gensplash as deprecated. This is
  3.4.9_pre3 for testing.

  17 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> TODO,
  alpha/modules_load, gen_cmdline.sh, gen_compile.sh, gen_configkernel.sh,
  gen_determineargs.sh, gen_initramfs.sh, gen_initrd.sh,
  generic/initrd.defaults, generic/initrd.scripts, generic/linuxrc,
  genkernel, genkernel.8, genkernel.conf, ia64/modules_load, mips/config.sh,
  ppc/modules_load, ppc64/modules_load, um/modules_load, x86/modules_load,