@@ -7,7 +7,7 @@ GK_V='3.4.9_pre3'
 # --tempdir command line option.
 TMPDIR='/var/tmp/genkernel'
 
-TODEBUGCACHE=1 # Until an error occurs or DEBUGFILE is fully qualified.
+TODEBUGCACHE=1 # Until an error occurs or LOGFILE is fully qualified.
 
 small_die() {
   echo $1
@@ -290,7 +290,7 @@ then
 	then
 		echo
 		echo
-		eval ${CMD_CALLBACK} | tee -a ${DEBUGFILE}
+		eval ${CMD_CALLBACK} | tee -a ${LOGFILE}
 		CMD_STATUS="${PIPESTATUS[0]}"
 		echo
 		print_info 1 "<<< Callback exit status: ${CMD_STATUS}"
