@@ -49,12 +49,12 @@ do the opposite thing. You can specify your options in any order.
 .PP
 .BR Debugging \ Options
 .TP
-\fB\-\-debuglevel=\fR<0-5>
+\fB\-\-loglevel=\fR<0-5>
 This controls the out verbosity level of genkernel output - if this is set
 to 0, minimal debugging is done; if this is set to 5 as much output as
 possible is given.
 .TP
-\fB\-\-debugfile=\fR<outfile>
+\fB\-\-logfile=\fR<outfile>
 This outputs debugging data to the file <outfile>. By default this is
 .I /var/log/genkernel.log\fR.
 .TP
