@@ -70,9 +70,9 @@ GK_SHARE="/usr/share/genkernel"
 # Location of the default cache
 CACHE_DIR="/var/cache/genkernel/%%ARCH%%"
 # Log output file
-DEBUGFILE="/var/log/genkernel.log"
+LOGFILE="/var/log/genkernel.log"
 # Debug Level
-DEBUGLEVEL=1
+LOGLEVEL=1
 
 # Default location of kernel source
 DEFAULT_KERNEL_SOURCE="/usr/src/linux"
